Supperss warnings about unnamed and unused parameters

--- a/uuniq/Makefile
+++ b/uuniq/Makefile
@@ -3,7 +3,7 @@
 .PHONY: all test randtest clean
 
 CC     = cc
-CFLAGS = -W
+CFLAGS = -W -Wno-c23-extensions
 LDLIBS =
 BINS   = uuniq uuniq_test uuniq_randtest
 
