Add initial benchmark target

--- a/uuniq/Makefile
+++ b/uuniq/Makefile
@@ -3,6 +3,7 @@
 .PHONY: all test randtest clean
 
 CC     = cc
+COPT_FLAGS = -O2 -funroll-loops
 CFLAGS = -W -Wno-c23-extensions
 LDLIBS =
 BINS   = uuniq uuniq_test uuniq_randtest
@@ -10,7 +11,7 @@ BINS   = uuniq uuniq_test uuniq_randtest
 all: $(BINS)
 
 uuniq: uuniq.c
-	$(CC) -O2 -funroll-loops $(CFLAGS) -o $@ $^ $(LDLIBS)
+	$(CC) $(COPT_FLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 test: uuniq_test
 	./uuniq_test
@@ -18,11 +19,17 @@ test: uuniq_test
 randtest: uuniq_randtest
 	./uuniq_randtest
 
+bench: uuniq_bench
+	./uuniq_bench
+
 uuniq_test: uuniq.c
 	$(CC) -DTEST -g3 -fsanitize=undefined -fsanitize-trap $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 uuniq_randtest: uuniq.c
-	$(CC) -DRANDTEST -g3 -O2 -funroll-loops -fsanitize=undefined -fsanitize-trap $(CFLAGS) -o $@ $^ $(LDLIBS)
+	$(CC) -DRANDTEST -g3 $(COPT_FLAGS) -fsanitize=undefined -fsanitize-trap $(CFLAGS) -o $@ $^ $(LDLIBS)
+
+uuniq_bench: uuniq.c
+	$(CC) -DBENCH $(COPT_FLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 clean:
 	rm -f $(BINS)
