Re-enable optimisations for randtest and bench targets;
accidentally removed in ccae883ad49c083317fafb4890b85126bcc8aad6.

--- a/uuniq/Makefile
+++ b/uuniq/Makefile
@@ -29,10 +29,10 @@ uuniq_test: uuniq.c
 	$(CC) -DTEST $(CDBGFLAGS) $(CDEVFLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 uuniq_randtest: uuniq.c
-	$(CC) -DRANDTEST $(CDBGFLAGS) $(COPT_FLAGS) $(CDEVFLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
+	$(CC) -DRANDTEST $(CDBGFLAGS) $(COPTFLAGS) $(CDEVFLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 uuniq_bench: uuniq.c
-	$(CC) -DBENCH $(COPT_FLAGS) $(CDEVFLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
+	$(CC) -DBENCH $(COPTFLAGS) $(CDEVFLAGS) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 clean:
 	rm -f $(BINS)
